--- a/src/main/scene1.fxml
+++ b/src/main/scene1.fxml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.SceneController1">
    <children>
-      <Button fx:id="button" layoutX="199.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Return to Grid from Scene 1" />
+      <Button fx:id="button" layoutX="199.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Return to Grid" />
+      <Label layoutX="14.0" layoutY="40.0" text="Tip Calculator" />
+      <Label layoutX="14.0" layoutY="69.0" text="Bill" />
+      <TextField fx:id="bill" layoutX="69.0" layoutY="64.0" onAction="#updateTotal" onKeyTyped="#updateTotal" promptText="0.00" />
+      <TextField fx:id="tipP" layoutX="69.0" layoutY="99.0" onAction="#updateTotal" onKeyTyped="#updateTotal" promptText="15%" />
+      <Label layoutX="16.0" layoutY="104.0" text="Tip %" />
+      <Label layoutX="16.0" layoutY="139.0" text="Number of people" />
+      <Slider fx:id="slider" layoutX="154.0" layoutY="139.0" majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" onMouseReleased="#updateTotal" prefHeight="15.0" prefWidth="90.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+      <Label layoutX="17.0" layoutY="192.0" text="Tip" />
+      <Label layoutX="17.0" layoutY="223.0" text="Total" />
+      <TextField fx:id="tip" editable="false" layoutX="69.0" layoutY="187.0" promptText="\$0.00" />
+      <TextField fx:id="total" editable="false" layoutX="69.0" layoutY="218.0" promptText="\$0.00" />
    </children>
 </Pane>
