--- a/src/main/scene2.fxml
+++ b/src/main/scene2.fxml
@@ -5,6 +5,6 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.SceneController2">
     <children>
-        <Button fx:id="button" layoutX="199.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Return to Grid from Scene 2" />
+        <Button fx:id="button" layoutX="199.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Return to Grid" />
     </children>
 </Pane>
